--- a/templates/company-user-invitation.hbs
+++ b/templates/company-user-invitation.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Andreas Zimmerman bittet um Referenz Bestätigung</title>
+  <title>Tomisha: Leah Freud hat dich eingeladen</title>
   <style>
     body {
       font-size: 21px;
@@ -88,7 +88,7 @@
     Hallo {{firstName}} {{lastName}},
     <br />
     <br />
-    du hast eine Anfrage von Bujar Islami erhalten für eine Referenzbestätigung.
+    Du wurdest eingeladen von:
   </p>
 
   <div class="card mb-md">
@@ -101,7 +101,7 @@
   </div>
 
   <a href="{{tokenUrl}}" target="_blank" class="btn mb-lg">
-    Referenz bestätigen
+    Profil erstellen
   </a>
 
   <p class="sender mb-md">
