--- a/templates/forgot-pw-email.hbs
+++ b/templates/forgot-pw-email.hbs
@@ -28,9 +28,10 @@
       border-radius: 12px;
       background: linear-gradient(95deg, #319795 0%, #3182CE 100%);
       color: #E6FFFA;
-      text-align: center;
+      font-size: 15px;
       line-height: 40px;
       cursor: pointer;
+      text-align: center;
       margin-bottom: 32px;
       text-decoration: none;
     }
