--- a/templates/pages/company-user-invitation.hbs
+++ b/templates/pages/company-user-invitation.hbs
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <a href="{{tokenUrl}}" target="_blank" class="btn mb-lg">
+    <a href="{{tokenUrl}}" target="_blank" class="btn">
       Profil erstellen
     </a>
   {{/inline}}
