--- a/templates/pages/verify-email.hbs
+++ b/templates/pages/verify-email.hbs
@@ -13,8 +13,12 @@
       E-Mail-Adresse bestätigne
     </a>
 
-    <p>oder füge ihn in dein Browser ein:</p>
-    <a href="{{tokenUrl}}" target="_blank" class="small mb-md">{{tokenUrl}}</a>
+    <p class="mb-md">
+      oder füge ihn in dein Browser ein:
+      <br />
+
+      <a href="{{tokenUrl}}" target="_blank" class="small">{{tokenUrl}}</a>
+    </p>
 
     <p>Dieser Link ist nur in den nächsten {{expHours}} Stunden gültig.</p>
   {{/inline}}
