--- a/templates/pages/reference-invitation.hbs
+++ b/templates/pages/reference-invitation.hbs
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <a href="{{tokenUrl}}" target="_blank" class="btn mb-lg">
+    <a href="{{tokenUrl}}" target="_blank" class="btn">
       Referenz bestätigen
     </a>
   {{/inline}}
