--- a/templates/partials/layout.hbs
+++ b/templates/partials/layout.hbs
@@ -117,7 +117,7 @@
   <header class="mb-xl">
     <h1>
       <div class="logo">
-        <img height="19px" width="15px" src="http://localhost:3200/img/tomisha.svg" />
+        <img height="19px" width="15px" src="https://tomisha.io/img/tomisha.svg" />
       </div>
 
       tomisha
