Add no track to emails href

--- a/templates/pages/forgot-pw-email.hbs
+++ b/templates/pages/forgot-pw-email.hbs
@@ -8,7 +8,7 @@
       Falls du diese Anfrage nicht gesendet hast, kannst du diese Nachricht einfach ignorieren. Andernfalls kannst du dein Passwort zurücksetzen.
     </p>
 
-    <a href="{{href}}" target="_blank" class="btn">
+    <a href="{{href}}" rel="notrack" target="_blank" class="btn">
       Dein Passwort zurücksetzen
     </a>
   {{/inline}}
