--- a/templates/pages/request-join-company-accepted.hbs
+++ b/templates/pages/request-join-company-accepted.hbs
@@ -7,7 +7,7 @@
       du wurdest zu einem Unternehmen hinzugefügt.
     </p>
 
-    <a href="{{href}}" target="_blank" class="btn">
+    <a href="{{href}}" rel="notrack" target="_blank" class="btn">
       Unternehmen Dashboard
     </a>
   {{/inline}}
