--- a/templates/pages/request-join-company.hbs
+++ b/templates/pages/request-join-company.hbs
@@ -12,7 +12,7 @@
       {{message}}
     </p>
 
-    <a href="{{href}}" target="_blank" class="btn mb-lg">
+    <a href="{{href}}" rel="notrack" target="_blank" class="btn mb-lg">
       Überprüfung des Mitarbeiters
     </a>
   {{/inline}}
