--- a/templates/pages/staff-invitation.hbs
+++ b/templates/pages/staff-invitation.hbs
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <a href="{{href}}" target="_blank" class="btn">
+    <a href="{{href}}" rel="notrack" target="_blank" class="btn">
       Profil erstellen
     </a>
   {{/inline}}
