--- a/templates/pages/verify-email.hbs
+++ b/templates/pages/verify-email.hbs
@@ -9,7 +9,7 @@
       Klick bitte auf den folgenden Link, um deine Anmeldung zu vervollständigen:
     </p>
 
-    <a href="{{href}}" target="_blank" class="btn mb-lg">
+    <a href="{{href}}" rel="notrack" target="_blank" class="btn mb-lg">
       E-Mail-Adresse bestätigne
     </a>
 
@@ -17,7 +17,7 @@
       oder füge ihn in dein Browser ein:
       <br />
 
-      <a href="{{href}}" target="_blank" class="small">{{href}}</a>
+      <a href="{{href}}" rel="notrack" target="_blank" class="small">{{href}}</a>
     </p>
 
     <p>Dieser Link ist nur in den nächsten {{expHours}} Stunden gültig.</p>
