--- a/templates/pages/reference-invitation.hbs
+++ b/templates/pages/reference-invitation.hbs
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <a href="{{href}}" target="_blank" class="btn">
+    <a href="{{href}}" rel="notrack" target="_blank" class="btn">
       Referenz bestätigen
     </a>
   {{/inline}}
