create db index

--- a/templates/pages/reference-invitation.hbs
+++ b/templates/pages/reference-invitation.hbs
@@ -4,7 +4,7 @@
       Hallo {{receiverName}},
       <br />
       <br />
-      du hast eine Anfrage von Bujar Islami erhalten für eine Referenzbestätigung.
+      du wurdest aufgefordert, eine Referenz zu erstellen von:
     </p>
 
     <div class="card mb-md">
@@ -19,7 +19,7 @@
     </div>
 
     <a href="{{href}}" rel="notrack" target="_blank" class="btn">
-      Referenz bestätigen
+      Zur Anfrage
     </a>
   {{/inline}}
 {{/layout}}
