--- a/templates/partials/layout.hbs
+++ b/templates/partials/layout.hbs
@@ -24,6 +24,10 @@
     p {
       margin: 0;
     }
+    .metadata {
+      font-size: 16px;
+      color: #718096;
+    }
     .small {
       font-size: 14px;
       color: #718096;
