--- a/templates/pages/verify-email.hbs
+++ b/templates/pages/verify-email.hbs
@@ -10,7 +10,7 @@
     </p>
 
     <a href="{{href}}" rel="notrack" target="_blank" class="btn mb-lg">
-      E-Mail-Adresse bestätigne
+      E-Mail-Adresse bestätigen
     </a>
 
     <p class="mb-md">
