--- a/templates/partials/layout.hbs
+++ b/templates/partials/layout.hbs
@@ -141,6 +141,13 @@
 <body>
   <div class="color-bar mb-xl"></div>
 
+  {{!-- <table>
+    <tr>
+      <td valign="top" width="35" height="35">
+      </td>
+    </tr>
+  </table> --}}
+
   <header class="mb-xl">
     <h1>
       <div class="logo">
