--- a/templates/pages/invite-contact.hbs
+++ b/templates/pages/invite-contact.hbs
@@ -7,15 +7,22 @@
       du hast eine Einladung erhalten von:
     </p>
 
-    <div class="card mb-md">
-      <div class="avatar">
-        <img src="{{senderPicture}}" />
-      </div>
-      <div class="body">
-        <div class="card-title">{{senderName}}</div>
-        <div class="card-sub-title">{{senderAddress}}</div>
-      </div>
-    </div>
+    <table class="card mb-md">
+      <tr border="0" style="height: 82px;">
+        <td valign="middle" width="auto" height="auto" style="padding: 10px 15px;">
+          <div class="avatar">
+            <img src="{{senderPicture}}" />
+          </div>
+        </td>
+
+        <td v-align="middle" style="width: 100%; padding: 10px 10px 10px 0;">
+          <div class="body">
+            <div class="card-title">{{senderName}}</div>
+            <div class="card-sub-title">{{senderAddress}}</div>
+          </div>
+        </td>
+      </tr>
+    </table>
 
     <a href="{{href}}" rel="notrack" target="_blank" class="btn">
       Zur Einladung
