--- a/templates/partials/layout.hbs
+++ b/templates/partials/layout.hbs
@@ -8,18 +8,6 @@
       font-size: 21px;
       font-family: Arial, Helvetica, sans-serif;
       color: #4A5568;
-      margin: 0;
-    }
-    header, .main, footer {
-      padding-left: 20px;
-      padding-right: 20px;
-    }
-    h1 {
-      font-size: 42px;
-      font-weight: 400;
-      line-height: 1;
-      margin-top: 0;
-      color: #718096;
     }
     p {
       margin: 0;
@@ -50,63 +38,66 @@
 
     .color-bar {
       height: 5px;
+      background-color: #3182CE;
       background-image: linear-gradient(to right, #319795, #3182CE);
     }
 
-    .logo {
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      height: 35px;
-      width: 35px;
-      border-radius: 50%;
-      background: linear-gradient(95deg, #319795 0%, #3182CE 100%);
-    }
-
-    .logo svg {
-      height: 20px;
-      fill: #fff;
-      vertical-align: middle;
-    }
-
     .btn {
-      display: block;
-      width: 100%;
-      max-width: 320px;
-      height: 40px;
-      border-radius: 12px;
-      background: linear-gradient(95deg, #319795 0%, #3182CE 100%);
-      font-size: 15px;
-      line-height: 40px;
-      color: #E6FFFA;
-      text-align: center;
-      cursor: pointer;
-      text-decoration: none;
+      display: block !important;
+      width: 100% !important;
+      max-width: 320px !important;
+      height: 40px !important;
+      min-height: 40px !important;
+      border-radius: 12px !important;
+      background-color: #3182CE !important;
+      background: linear-gradient(95deg, #319795 0%, #3182CE 100%) !important;
+      font-size: 15px !important;
+      line-height: 40px !important;
+      color: #E6FFFA !important;
+      text-align: center !important;
+      cursor: pointer !important;
+      text-decoration: none !important;
+      outline: none !important;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .btn {
+        background-color: #3182CE !important;
+        background: linear-gradient(95deg, #319795 0%, #3182CE 100%) !important;
+        color: #E6FFFA !important;
+      }
+    }
+
+    [data-ogsc] .btn {
+      background-color: #3182CE !important;
+      background: linear-gradient(95deg, #319795 0%, #3182CE 100%) !important;
+      color: #E6FFFA !important;
     }
 
     .card {
       border: 1px solid #CBD5E0;
       border-radius: 12px;
-      padding: 20px;
-      display: inline-flex;
-      align-items: center;
+      width: 100%;
+      max-width: 320px;
+      background: #fff;
     }
 
-    .card .avatar {
+    .avatar {
       display: inline-block;
       width: 48px;
       height: 48px;
       overflow: hidden;
       border-radius: 100%;
       border: 3px solid #4FD1C5;
+      box-sizing: border-box;
     }
     .card .avatar img {
       width: 100%;
       height: 100%;
+      display: block;
     }
     .card .body {
       display: inline-block;
-      padding-left: 15px;
     }
     .card .card-title {
       font-size: 14px;
@@ -141,43 +132,40 @@
 <body>
   <div class="color-bar mb-xl"></div>
 
-  {{!-- <table>
-    <tr>
-      <td valign="top" width="35" height="35">
-      </td>
-    </tr>
-  </table> --}}
+  <div style="padding: 0 20px;">
+    <table class="mb-xl" style="border: none; width: 100%;">
+      <tr border="0">
+        <td valign="middle" width="35" height="35">
+          <img height="35px" width="35px" src="https://tomisha.io/img/email-logo.png" style="display: block;" />
+        </td>
 
-  <header class="mb-xl">
-    <h1>
-      <div class="logo">
-        <img height="19px" width="15px" src="https://tomisha.io/img/tomisha.svg" />
-      </div>
+        <td valign="middle" style="font-size: 42px; font-weight: 400; line-height: 1; margin-top: 0; color: #718096; padding-left: 4px;">
+          tomisha
+        </td>
+      </tr>
+    </table>
 
-      tomisha
-    </h1>
-  </header>
+    <div class="main mb-xl">
+      {{> content}}
+    </div>
 
-  <div class="main mb-xl">
-    {{> content}}
+    <div>
+      <p class="sender mb-md">
+        Danke!<br />
+        Dein Tomisha-Team
+      </p>
+
+      <hr class="mb-md">
+
+      <p class="small">
+        Copyright © 2020 Tomisha. Alle Rechte vorbehalten.
+        <br />
+        <br />
+        Mit ❤ von Tomisha versendet<br />
+        Tomisha, Thomas Hungerbühler,<br />
+        Brühlbergstrasse 11, 8400 Winterthur, Schweiz
+      </p>
+    </div>
   </div>
-
-  <footer>
-    <p class="sender mb-md">
-      Danke!<br />
-      Dein Tomisha-Team
-    </p>
-
-    <hr class="mb-md">
-
-    <p class="small">
-      Copyright © 2020 Tomisha. Alle Rechte vorbehalten.
-      <br />
-      <br />
-      Mit ❤ von Tomisha versendet<br />
-      Tomisha, Thomas Hungerbühler,<br />
-      Brühlbergstrasse 11, 8400 Winterthur, Schweiz
-    </p>
-  </footer>
 </body>
 </html>
