Email image not visible issue

--- a/templates/partials/layout.hbs
+++ b/templates/partials/layout.hbs
@@ -136,7 +136,7 @@
     <table class="mb-xl" style="border: none; width: 100%;">
       <tr border="0">
         <td valign="middle" width="35" height="35">
-          <img height="35px" width="35px" src="https://tomisha.io/img/email-logo.png" style="display: block;" />
+          <img height="35px" width="35px" src="https://tomisha.com/img/email-logo.png" style="display: block;" />
         </td>
 
         <td valign="middle" style="font-size: 42px; font-weight: 400; line-height: 1; margin-top: 0; color: #718096; padding-left: 4px;">
